# epaper-pi-zero-2w

./: .gitignore  CLAUDE.md  README.md  SETUP.md
demo_code/Arduino_ESP32_2.13_V2/: Arduino_ESP32_2.13_V2.ino  epd_2inch13.cpp  epd_2inch13.h  epd_demo.h  epd_gui.cpp  epd_gui.h  font24.cpp  font8.cpp  fonts.h
demo_code/Arduino_MEGA_2.13_V2/: Arduino_MEGA_2.13_V2.ino  epd_2inch13.cpp  epd_2inch13.h  epd_demo.h  epd_gui.cpp  font12.cpp  font16.cpp  font20.cpp  font24.cpp  font8.cpp  fonts.h
demo_code/Arduino_UNO_2.13_V2/: Ap_213demo.h  Arduino_UNO_2.13_V2.ino
demo_code/Raspberry-Pi_2.13_V2/c/: 2inch13_epd.c  2inch13_epd.h  Ap_213demo.h  epd_gui.c  epd_gui.h  font24.c  main.c  sg_lgpio.h
demo_code/STM32_2.13_V2/HARDWARE/EPD/: 2in13_epd.c  2in13_epd.h  Ap_213demo.h  Display_EPD_W21_spi.c  Display_EPD_W21_spi.h
demo_code/STM32_2.13_V2/HARDWARE/Fonts/: font12.c  font16.c  font20.c  fonts.h
demo_code/STM32_2.13_V2/HARDWARE/GUI/: epd_gui.c  epd_gui.h
demo_code/STM32_2.13_V2/SYSTEM/delay/: delay.c
demo_code/STM32_2.13_V2/SYSTEM/usart/: usart.c  usart.h
demo_code/STM32_2.13_V2/USER/: main.c  stm32f10x.h
examples/: 01_hello_world.py  02_shapes.py  03_display_image.py  04_clock.py  05_system_info.py  06_weather_template.py  README.md  display_server.py  epd_helper.py  landscape_helper.py  pyproject.toml  requirements.txt
examples/templates/: index.html
src/: test_display.py
systemd/: display-server.service  install.sh  uninstall.sh
